--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
