--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "react-toggle-dark-mode": "^1.1.1",
     "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
